vlib/v/checker/tests/prefix_expr_decl_assign_err.vv
fn main() {
	&a := 12
	(*d) := 14
}
